--- a/client/src/Components/Nav/Nav.css
+++ b/client/src/Components/Nav/Nav.css
@@ -164,5 +164,10 @@ a {
     border-bottom-left-radius: 30rem;
   }
 }
+@media only screen and (min-width: 600px) {
+  .menu {
+    display: none;
+  }
+}
 
 /*# sourceMappingURL=Nav.css.map */
