--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,16 +5,24 @@
 
 html {
    -webkit-tap-highlight-color: transparent;
+   overflow: hidden;
+   overflow-y: auto;
 }
 
 html, body {
    height: 100%;
 }
 
+html, body, #root {
+   width: 100%;
+}
+
 body {
    background: rgb(152, 126, 126);
    color: white;
-   overflow-x: hidden;   
+   overflow-x: hidden;
+   -webkit-overflow-x: hidden;
+   
 }
 
 #root {
@@ -25,4 +33,6 @@ body {
 main {
    // height: 100px;
    padding-bottom: 75px;
+   padding-left: env(safe-area-inset-left);
+   padding-right: env(safe-area-inset-right);
 }
