--- a/client/src/Components/Nav/Nav.css
+++ b/client/src/Components/Nav/Nav.css
@@ -5,6 +5,8 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
 }
 nav .logo {
   align-self: center;
@@ -97,7 +99,7 @@ nav .selected-menu {
   position: absolute;
   right: 0px;
   width: 80%;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(100, 0, 0, 0.6);
   backdrop-filter: blur(15px);
   border-bottom-left-radius: 3rem;
   transform: translateX(100%);
