--- a/client/src/Components/Nav/Nav.css
+++ b/client/src/Components/Nav/Nav.css
@@ -7,6 +7,7 @@ nav {
   justify-content: space-between;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+  z-index: 9999;
 }
 nav .logo {
   align-self: center;
@@ -105,6 +106,7 @@ nav .selected-menu {
   transform: translateX(100%);
   display: flex;
   justify-content: center;
+  z-index: 9999;
 }
 .menu .nav-links {
   display: flex;
@@ -120,6 +122,7 @@ nav .selected-menu {
   font-size: 1.5rem;
   border-radius: 20px;
   transition: all 0.4s ease;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 @media (hover: hover) and (pointer: fine) {
   .menu .nav-links li:hover {
