--- a/client/src/Components/Nav/Nav.scss
+++ b/client/src/Components/Nav/Nav.scss
@@ -7,6 +7,7 @@ nav {
    justify-content: space-between;
    padding-left: env(safe-area-inset-left);
    padding-right: env(safe-area-inset-right);
+   z-index: 9999;
 
    .logo {
       align-self: center;
@@ -117,6 +118,7 @@ nav {
    transform: translateX(100%);
    display: flex;
    justify-content: center;
+   z-index: 9999;
 
    .nav-links {
       display: flex;
@@ -132,7 +134,8 @@ nav {
          font-size: 1.5rem;
          border-radius: 20px;
          transition: all .4s ease;
-         
+         border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+
          @media (hover: hover) and (pointer: fine) {
             &:hover {
                cursor: pointer;
