--- a/client/src/Components/Cards/Cards.scss
+++ b/client/src/Components/Cards/Cards.scss
@@ -2,24 +2,24 @@
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
-   justify-content: space-around;
+   justify-content: center;
 
    .main-title {
       width: 100%;
-      margin: 1.5rem;
-      font-size: 2.5rem;
+      margin: 2rem 0 0.5rem 0;
+      font-size: 2rem;
       text-align: center;
    }
    .card {
       width: 25%;
-      max-width: 350px;
-      min-width: 200px;
-      margin: 1rem;
+      max-width: 300px;
+      min-width: 250px;
+      margin: 1.5rem;
       padding: 2rem;
       text-align: center;
       border-radius: 1rem;
       box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
-      background: linear-gradient(45deg, rgba(255, 255, 255, 0.6), rgba(162, 162, 162, 0.6));
+      background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgba(162, 162, 162, 0.8));
       color: rgb(60, 60, 60);
       transition: all 0.2s;
       display: flex;
@@ -27,13 +27,18 @@
       justify-content: center;
 
       h3 {
-         font-size: 2rem;
+         font-size: 1.75rem;
          border-radius: 0.5rem;
-         border-bottom: 0.1rem solid rgba(0, 0, 0, 0.4);
+         margin-bottom: 1.5rem;
+      }
+      .line {
+         height: 2px;
+         width: 100%;
+         background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.4), transparent);
       }
       p {
-         margin-top: 1.5rem;
          font-size: 1.5rem;
+         margin-top: 1.5rem;
       }
 
       @media (hover: hover) and (pointer: fine) {
