Client color and design updated

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -18,7 +18,9 @@ html, body, #root {
 }
 
 body {
-   background: rgb(152, 126, 126);
+   // background: rgb(152, 126, 126);
+   // background: #a08282;
+   background: #cfc4c4;
    color: white;
    overflow-x: hidden;
    -webkit-overflow-x: hidden;
