--- a/client/src/Components/Cards/Cards.scss
+++ b/client/src/Components/Cards/Cards.scss
@@ -9,6 +9,7 @@
       margin: 2rem 0 0.5rem 0;
       font-size: 2rem;
       text-align: center;
+      text-shadow: 0 2px 12px black;
    }
    .card {
       width: 25%;
@@ -19,26 +20,29 @@
       text-align: center;
       border-radius: 1rem;
       box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
-      background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgba(162, 162, 162, 0.8));
-      color: rgb(60, 60, 60);
+      // background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgba(120, 120, 120, 0.8));
+      // background: linear-gradient(45deg, rgb(195 193 193), rgb(123 33 29));
+      background: linear-gradient(45deg, #ba9595, #872d28);
+      // color: rgb(60, 60, 60);
       transition: all 0.2s;
       display: flex;
       flex-direction: column;
       justify-content: center;
 
       h3 {
-         font-size: 1.75rem;
+         font-size: 2rem;
          border-radius: 0.5rem;
-         margin-bottom: 1.5rem;
+         margin-top: 2rem;
       }
       .line {
          height: 2px;
          width: 100%;
-         background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.4), transparent);
+         // background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.4), transparent);
+         background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.4), transparent);
       }
       p {
          font-size: 1.5rem;
-         margin-top: 1.5rem;
+         margin-bottom: .5rem;
       }
 
       @media (hover: hover) and (pointer: fine) {
