--- a/client/src/Components/Nav/Nav.css
+++ b/client/src/Components/Nav/Nav.css
@@ -36,6 +36,7 @@ nav .nav-links {
 nav .nav-links li {
   font-size: 1.5rem;
   border-radius: 1rem;
+  -webkit-border-radius: 1rem;
   padding: 0.5rem 1.5rem;
   transition: all 0.2s ease;
 }
@@ -43,15 +44,15 @@ nav .nav-links li {
   nav .nav-links li:hover {
     cursor: pointer;
     background: rgba(255, 255, 255, 0.1);
-    font-size: 1.7rem;
+    font-size: 1.6rem;
   }
 }
 nav .nav-links li:active {
   background: rgba(255, 255, 255, 0.2);
-  font-size: 1.65rem;
+  font-size: 1.55rem;
 }
 nav .nav-links .selected {
-  border-bottom: 1px solid white;
+  box-shadow: 0px 5px 5px -2.5px white;
 }
 nav .burger-button {
   display: none;
@@ -64,22 +65,22 @@ nav .selected-menu {
   white-space: nowrap;
   overflow: hidden;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 750px) {
   nav .nav-links li {
     font-size: 1.2rem;
   }
 }
-@media only screen and (max-width: 700px) and (hover: hover) and (pointer: fine) {
+@media only screen and (max-width: 750px) and (hover: hover) and (pointer: fine) {
   nav .nav-links li:hover {
     font-size: 1.4rem;
   }
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 750px) {
   nav .nav-links li:active {
     font-size: 1.35rem;
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
   nav .nav-links {
     display: none;
   }
@@ -94,12 +95,15 @@ nav .selected-menu {
   nav .selected-menu {
     font-size: 1.2rem;
   }
+  nav .logo {
+    height: 2.5rem;
+  }
 }
 
 .menu {
   position: absolute;
   right: 0px;
-  width: 80%;
+  width: 60%;
   background: rgba(100, 0, 0, 0.6);
   backdrop-filter: blur(15px);
   border-bottom-left-radius: 3rem;
@@ -112,26 +116,26 @@ nav .selected-menu {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 3rem;
+  margin: 2rem;
   text-align: center;
   list-style: none;
 }
 .menu .nav-links li {
-  margin: 1.5rem 0;
+  margin: 1rem 0;
   padding: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   border-radius: 20px;
   transition: all 0.4s ease;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 5px 5px -2.5px white;
 }
 @media (hover: hover) and (pointer: fine) {
   .menu .nav-links li:hover {
     cursor: pointer;
-    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px 1.5px white;
   }
 }
 .menu .nav-links li:active {
-  box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.4);
+  background: rgba(255, 255, 255, 0.4);
 }
 
 a {
@@ -171,9 +175,19 @@ a {
     border-bottom-left-radius: 30rem;
   }
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 650px) {
   .menu {
     display: none;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .menu {
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .menu {
+    width: 80%;
   }
 }
 
