--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,7 @@ html, body, #root {
 }
 
 body {
-  background: #987e7e;
+  background: #cfc4c4;
   color: white;
   overflow-x: hidden;
   -webkit-overflow-x: hidden;
