--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,10 +9,6 @@ html {
   overflow-y: auto;
 }
 
-html, body {
-  height: 100%;
-}
-
 html, body, #root {
   width: 100%;
 }
@@ -22,15 +18,19 @@ body {
   color: white;
   overflow-x: hidden;
   -webkit-overflow-x: hidden;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 #root {
   position: relative;
-  min-height: 100%;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
 main {
-  padding-bottom: 75px;
+  padding-top: 65px;
+  padding-bottom: 125px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
