--- a/client/src/Components/Cards/Cards.css
+++ b/client/src/Components/Cards/Cards.css
@@ -19,30 +19,81 @@
   padding: 2rem;
   text-align: center;
   border-radius: 1rem;
-  box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 25px 5px rgba(0, 0, 0, 0.2);
   background: linear-gradient(45deg, #ba9595, #872d28);
   transition: all 0.2s;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.card-container .card h3 {
-  font-size: 2rem;
-  border-radius: 0.5rem;
-  margin-top: 2rem;
+.card-container .card p {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 .card-container .card .line {
   height: 2px;
   width: 100%;
   background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.4), transparent);
 }
-.card-container .card p {
-  font-size: 1.5rem;
-  margin-bottom: 0.5rem;
+.card-container .card h3 {
+  font-size: 2rem;
+  border-radius: 0.5rem;
+  margin-top: 2rem;
 }
 @media (hover: hover) and (pointer: fine) {
   .card-container .card:hover {
     transform: scale(1.02);
+  }
+}
+@media only screen and (max-width: 750px) {
+  .card-container .card {
+    max-width: 250px;
+    min-width: 175px;
+    margin: 0.75rem;
+    padding: 1.75rem;
+  }
+  .card-container .card p {
+    font-size: 1.25rem;
+  }
+  .card-container .card h3 {
+    font-size: 1.75rem;
+    margin-top: 1.75rem;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .card-container .main-title {
+    font-size: 1.5rem;
+  }
+  .card-container .card {
+    max-width: 200px;
+    min-width: 150px;
+    margin: 0.5rem;
+    padding: 1.5rem;
+  }
+  .card-container .card p {
+    font-size: 1rem;
+  }
+  .card-container .card h3 {
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .card-container .main-title {
+    font-size: 1.25rem;
+  }
+  .card-container .card {
+    max-width: 175px;
+    min-width: 125px;
+    margin: 0.5rem;
+    padding: 1rem;
+  }
+  .card-container .card p {
+    font-size: 0.9rem;
+  }
+  .card-container .card h3 {
+    font-size: 1.15rem;
+    margin-top: 1.15rem;
   }
 }
 
