--- a/client/src/Components/Footer/Footer.scss
+++ b/client/src/Components/Footer/Footer.scss
@@ -1,14 +1,24 @@
 footer {
+   z-index: 1;
    position: absolute;
    width: 100%;
-   height: 75px;
+   height: 125px;
    bottom: 0;
-   // background: linear-gradient(to right, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.2));
    background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));
    backdrop-filter: blur(15px);
    display: flex;
    justify-content: center;
+
    label {
       align-self: center;
+      font-size: 1.5rem;
+
+      span {
+         color: red;
+      }
+
+      @media only screen and (max-width: 450px) {
+         font-size: 1rem;
+      }
    }
 }
