--- a/client/src/Components/Nav/Nav.css
+++ b/client/src/Components/Nav/Nav.css
@@ -1,4 +1,6 @@
 nav {
+  position: fixed;
+  width: 100%;
   user-select: none;
   background: linear-gradient(to right, #530808, #a90b0b);
   color: white;
@@ -10,19 +12,25 @@ nav {
   z-index: 9999;
 }
 nav .logo {
+  display: block;
   align-self: center;
   height: 3rem;
   padding: 0.7rem;
-  animation: rotate 30s linear infinite;
+  animation: rotate 15s linear infinite;
+  border-radius: 100%;
+  transition: all 0.4s;
 }
-nav .logo:hover {
-  cursor: pointer;
+@media (hover: hover) and (pointer: fine) {
+  nav .logo:hover {
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.1);
+  }
 }
 @keyframes rotate {
-  0% {
+  from {
     transform: rotate(0deg);
   }
-  100% {
+  to {
     transform: rotate(360deg);
   }
 }
@@ -101,7 +109,8 @@ nav .selected-menu {
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
+  top: 60px;
   right: 0px;
   width: 60%;
   background: rgba(100, 0, 0, 0.6);
@@ -110,7 +119,7 @@ nav .selected-menu {
   transform: translateX(100%);
   display: flex;
   justify-content: center;
-  z-index: 9999;
+  z-index: 9998;
 }
 .menu .nav-links {
   display: flex;
