--- a/client/src/Containers/Pages.css
+++ b/client/src/Containers/Pages.css
@@ -18,13 +18,30 @@
     transform: scale(1.02);
   }
 }
-.diagram .loading {
-  width: 50px;
-  position: relative;
-  display: inline-block;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+.map-container {
+  display: flex;
+  justify-content: center;
+}
+.map-container .map {
+  align-self: flex-start;
+  width: 80%;
+  max-width: 800px;
+  margin: 4rem;
+  border-radius: 2rem;
+  box-shadow: 0 0 25px 5px rgba(0, 0, 0, 0.2);
+  transition: all 0.4s;
+}
+@media (hover: hover) and (pointer: fine) {
+  .map-container .map:hover {
+    transform: scale(1.02);
+  }
+}
+@media only screen and (max-width: 600px) {
+  .map-container .map {
+    width: 95%;
+    border-radius: 0.75rem;
+  }
 }
 
 section {
@@ -43,10 +60,10 @@ section {
 
 @media only screen and (max-width: 600px) {
   .diagram {
-    width: 85%;
+    width: 90%;
     height: 300px;
     min-width: unset;
   }
 }
 
-/*# sourceMappingURL=Covid.css.map */
+/*# sourceMappingURL=Pages.css.map */
