--- a/client/src/Containers/Pages.scss
+++ b/client/src/Containers/Pages.scss
@@ -1,10 +1,5 @@
 .diagram {
-   // background: rgba(255, 255, 255, 0.6);
-   // background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgba(125, 125, 125, 0.8));
-   // background: linear-gradient(45deg, rgb(206 206 206), rgb(154 130 130));
-   // background: linear-gradient(45deg, rgb(195 193 193), rgb(134 75 71));
    background: linear-gradient(45deg, #ba9595, #872d28);
-   // background: linear-gradient(45deg, #ab2a2a, #540e0e);
    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
    width: 60%;
    min-width: 450px;
@@ -24,13 +19,33 @@
          transform: scale(1.02);
       }
    }
-   .loading {
-      width: 50px;
-      position: relative;
-      display: inline-block;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+}
+
+.map-container {
+   display: flex;
+   justify-content: center;
+
+   .map {
+      align-self: flex-start;
+      width: 80%;
+      max-width: 800px;
+      margin: 4rem;
+      border-radius: 2rem;
+      box-shadow: 0 0 25px 5px rgba(0, 0, 0, 0.2);
+      transition: all .4s;
+
+      @media (hover: hover) and (pointer: fine) {
+         &:hover {
+            transform: scale(1.02);
+         }
+      }
+   }
+   
+   @media only screen and (max-width: 600px) {
+      .map {
+         width: 95%;
+         border-radius: .75rem;
+      }
    }
 }
 
@@ -50,7 +65,7 @@ section {
 
 @media only screen and (max-width: 600px) {
    .diagram {
-      width: 85%;
+      width: 90%;
       height: 300px;
       min-width: unset;
    }
