--- a/client/src/Components/Cards/Cards.css
+++ b/client/src/Components/Cards/Cards.css
@@ -33,7 +33,7 @@
 .card-container .card .line {
   height: 2px;
   width: 100%;
-  background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.4), transparent);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
 }
 .card-container .card h3 {
   font-size: 2rem;
