--- a/client/src/Components/Cards/Cards.scss
+++ b/client/src/Components/Cards/Cards.scss
@@ -35,7 +35,7 @@
       .line {
          height: 2px;
          width: 100%;
-         background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.4), transparent);
+         background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
       }
 
       h3 {
