LICENSE added and css modifications

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,7 +6,7 @@
 html {
    -webkit-tap-highlight-color: transparent;
    overflow: hidden;
-   overflow-y: auto;
+   overflow-y: scroll;
 }
 
 html, body, #root {
