--- a/client/src/Components/Cards/Cards.scss
+++ b/client/src/Components/Cards/Cards.scss
@@ -57,6 +57,7 @@
          min-width: 175px;
          margin: 0.75rem;
          padding: 1.75rem;
+         border-radius: .8rem;
 
          p {
             font-size: 1.25rem;
