--- a/client/src/Components/Footer/Footer.scss
+++ b/client/src/Components/Footer/Footer.scss
@@ -2,17 +2,20 @@ footer {
    z-index: 1;
    position: absolute;
    width: 100%;
-   height: 125px;
+   // height: 200px;
    bottom: 0;
-   background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));
+   padding: 2rem 0 2rem;
+   background: linear-gradient(to right, rgba(71, 4, 4, 0.5), rgba(54, 3, 3, 0.2));
    backdrop-filter: blur(15px);
    display: flex;
+   flex-direction: column;
    justify-content: center;
 
    img {
       align-self: center;
       height: 50px;
       width: 50px;
+      margin-top: 1rem;
 
       @media only screen and (max-width: 450px) {
          height: 40px;
@@ -20,9 +23,10 @@ footer {
       }
    }
    label {
-      padding: .5rem .5rem 0;
+      // padding: .5rem .5rem 0;
       align-self: center;
       font-size: 1.5rem;
+      margin-top: .1rem;
       
       a {
          text-decoration: underline;
