--- a/client/src/Components/Nav/Nav.scss
+++ b/client/src/Components/Nav/Nav.scss
@@ -50,22 +50,24 @@ nav {
          -webkit-border-radius: 1rem;
          padding: 0.5rem 1.5rem;
          transition: all .2s ease;
+         // border-bottom: .2rem solid transparent;
+         box-shadow: 0px 5px 5px -2.5px transparent;
 
          @media (hover: hover) and (pointer: fine) {
             &:hover {
                cursor: pointer;
                background: rgba(255, 255, 255, 0.1);
-               font-size: 1.6rem;
+               // font-size: 1.6rem;
             }
          }
          &:active {
             background: rgba(255, 255, 255, 0.2);
-            font-size: 1.55rem;
+            // font-size: 1.55rem;
          }
       }
 
       .selected {
-         // border-bottom: 1px solid white;
+         // border-bottom: .2rem solid white;
          // -webkit-border-bottom: 1px solid white;
          box-shadow: 0px 5px 5px -2.5px white;
       }
