--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -39,11 +39,28 @@ main {
 .issue-message {
    display: flex;
    height: 100vh;
+   flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    color: red;
    h1 {
       text-align: center;
+      // border: 1px solid red;
    }
+   // border: 1px solid red;
+   .loading {
+      left: 0;
+      transform: none;
+      width: 50px;
+   }
+}
+
+.loading {
+   width: 35px;
+   padding: 50px;
+   position: relative;
+   display: inline-block;
+   left: 50%;
+   transform: translateX(-50%);
    // border: 1px solid red;
 }
