--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -31,7 +31,7 @@ body {
 
 main {
    padding-top: 65px;
-   padding-bottom: 175px;
+   // padding-bottom: 260px;
    padding-left: env(safe-area-inset-left);
    padding-right: env(safe-area-inset-right);
 }
