--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -1,31 +1,40 @@
 footer {
   z-index: 1;
-  position: absolute;
   width: 100%;
-  bottom: 0;
+  margin-top: 4rem;
   padding: 2rem 0 2rem;
   background: linear-gradient(to right, rgba(71, 4, 4, 0.5), rgba(54, 3, 3, 0.2));
   backdrop-filter: blur(15px);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 1.5rem;
 }
-footer img {
-  align-self: center;
-  height: 50px;
-  width: 50px;
-  margin-top: 1rem;
+footer div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer div img {
+  height: 40px;
+  width: 40px;
+  margin: 0.25rem;
 }
 @media only screen and (max-width: 450px) {
-  footer img {
-    height: 40px;
-    width: 40px;
+  footer div img {
+    height: 35px;
+    width: 35px;
   }
+}
+footer div a {
+  margin: 0.25rem;
+  padding: 0.5rem 0 0;
+  cursor: pointer;
 }
 footer label {
   align-self: center;
-  font-size: 1.5rem;
   margin-top: 0.1rem;
+  text-align: center;
 }
 footer label a {
   text-decoration: underline;
