--- a/client/src/Components/Footer/Footer.scss
+++ b/client/src/Components/Footer/Footer.scss
@@ -1,32 +1,51 @@
 footer {
    z-index: 1;
-   position: absolute;
+   // position: absolute;
    width: 100%;
    // height: 200px;
-   bottom: 0;
+   // bottom: 0;
+   margin-top: 4rem;
    padding: 2rem 0 2rem;
    background: linear-gradient(to right, rgba(71, 4, 4, 0.5), rgba(54, 3, 3, 0.2));
    backdrop-filter: blur(15px);
    display: flex;
    flex-direction: column;
    justify-content: center;
+   font-size: 1.5rem;
 
-   img {
-      align-self: center;
-      height: 50px;
-      width: 50px;
-      margin-top: 1rem;
+   div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      // border: 1px solid red;
 
-      @media only screen and (max-width: 450px) {
+      img {
+         // align-self: center;
          height: 40px;
          width: 40px;
+         margin: .25rem;
+   
+         @media only screen and (max-width: 450px) {
+            height: 35px;
+            width: 35px;
+         }
+         // border: 1px solid red;
+      }
+
+      a {
+         margin: .25rem;
+         padding: .5rem 0 0;
+         // border: 1px solid red;
+         // align-self: center;
+         cursor: pointer;
       }
    }
+
    label {
       // padding: .5rem .5rem 0;
       align-self: center;
-      font-size: 1.5rem;
       margin-top: .1rem;
+      text-align: center;
       
       a {
          text-decoration: underline;
