--- a/client/src/Containers/Pages.css
+++ b/client/src/Containers/Pages.css
@@ -27,15 +27,10 @@
   align-self: flex-start;
   width: 80%;
   max-width: 800px;
-  margin: 4rem;
+  margin: 4rem 4rem 2rem;
   border-radius: 2rem;
   box-shadow: 0 0 25px 5px rgba(0, 0, 0, 0.2);
   transition: all 0.4s;
-}
-@media (hover: hover) and (pointer: fine) {
-  .map-container .map:hover {
-    transform: scale(1.02);
-  }
 }
 @media only screen and (max-width: 600px) {
   .map-container .map {
@@ -44,9 +39,14 @@
   }
 }
 
+.section {
+  animation: load-in 0.8s ease-in-out;
+}
+
 section {
   animation: load-in 0.8s ease-in-out;
 }
+
 @keyframes load-in {
   from {
     transform: translateY(25%);
@@ -57,7 +57,6 @@ section {
     opacity: 1;
   }
 }
-
 @media only screen and (max-width: 600px) {
   .diagram {
     width: 90%;
